--- a/render.yaml
+++ b/render.yaml
@@ -9,3 +9,21 @@ services:
         value: 3.9.0
     plan: free
     autoDeploy: false
+
+  - type: web
+    name: enhanced-cloud-browser
+    env: python
+    buildCommand: |
+      apt-get update
+      apt-get install -y wget unzip chromium-driver
+      pip install -r requirements.txt
+    startCommand: gunicorn selenium_app:app
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.9.0
+      - key: PYTHONUNBUFFERED
+        value: "true"
+      - key: DISPLAY
+        value: ":99"
+    plan: standard
+    autoDeploy: false
