--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ requests==2.26.0
 beautifulsoup4==4.10.0
 gunicorn==20.1.0
 werkzeug==2.0.2
+selenium==4.1.0
+webdriver-manager==3.5.2
+Pillow==8.4.0
