--- a/render.yaml
+++ b/render.yaml
@@ -13,16 +13,15 @@ services:
   - type: web
     name: enhanced-cloud-browser
     env: python
-    buildCommand: |
-      apt-get update
-      apt-get install -y wget unzip chromium-driver
-      pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn selenium_app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
       - key: PYTHONUNBUFFERED
         value: "true"
+      - key: SELENIUM_DRIVER_EXECUTABLE_PATH
+        value: "/usr/bin/chromedriver"
       - key: DISPLAY
         value: ":99"
     plan: standard
